--- a/Project.toml
+++ b/Project.toml
@@ -1,16 +1,7 @@
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
-Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
-DBFTables = "75c7ada1-017a-5fb6-b8c7-2125ff2d6c93"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-DataTables = "743a1d0a-8ebc-4f23-814b-50d006366bc6"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-Gtk = "4c0ca9eb-093a-5379-98c5-f87ac0bbbf44"
-OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
-RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
-Stipple = "4acbeb90-81a0-11ea-1966-bdaff8155998"
-StippleCharts = "30ddb3f0-912f-4f34-9804-e4bb31290777"
-StipplePlotly = "ec984513-233d-481d-95b0-a3b58b97af2b"
-StippleUI = "a3c5d34a-b254-4859-a8fa-b86abb7e84a3"
+LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 StringEncodings = "69024149-9ee7-55f6-a4c4-859efe599b68"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
