--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "git.ignoreLimitWarning": true,
-    "julia.environmentPath": "c:\\Sistemas\\Notificasus_jl"
+    "git.ignoreLimitWarning": true
 }
