--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,6 @@ DBFTables = "75c7ada1-017a-5fb6-b8c7-2125ff2d6c93"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Gtk = "4c0ca9eb-093a-5379-98c5-f87ac0bbbf44"
+StipplePlotly = "ec984513-233d-481d-95b0-a3b58b97af2b"
 StringEncodings = "69024149-9ee7-55f6-a4c4-859efe599b68"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
